Added margins and paddings

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
         </div>
       </div>
 
-      <div id="gallery" class="mt-2 flex justify-center bg-gallery rounded-3xl shadow-lg p-6">
+      <div id="gallery" class="mt-10 flex justify-center bg-gallery rounded-3xl shadow-lg p-6">
         <!-- Limit the carousel size -->
-        <div class="swiper mySwiper w-full max-w-4xl rounded-xl ">
+        <div class="swiper mySwiper w-full max-w-4xl rounded-xl pt-12 ">
           <div class="swiper-wrapper">
             <!-- Slide 1 -->
             <div class="swiper-slide relative">
