--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <div
         class="p-6 bg-white/70 backdrop-blur-md rounded-3xl shadow-xl border border-white/60 flex flex-col md:flex-row gap-6">
         <div class="flex-1 text-center md:text-left">
-          <h2 class="text-3xl text-topaz-700 ubuntu-regular">topaz</h2>
-          <h3 class="text-4xl text-black mt-2">Tu viaje personal, en tus propias palabras</h3>
+          <h1 class="text-3xl text-topaz-700 ubuntu-regular">topaz</h1>
+          <h2 class="text-4xl text-black mt-2">Tu viaje personal, en tus propias palabras</h2>
           <p class="mt-3 text-slate-600 max-w-xl mx-auto md:mx-0">Topaz es una app que te ayudará en tu crecimiento
             personal.</p>
           <p class="mt-2 text-slate-600 max-w-xl mx-auto md:mx-0">Es un diario guiado que te ayudará a hacer
@@ -72,44 +72,48 @@
       </div>
 
       <!-- Features 1 -->
-      <div id="features" class="mt-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
+      <h3 class="text-3xl text-black mt-10">Funcionalidades</h3>
+
+      <div id="features" class="mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
         <div class="p-4 rounded-2xl bg-white/65 backdrop-blur-md">
-          <h3 class="font-semibold">Privacidad Primero</h3>
+          <h4 class="font-semibold">Privacidad Primero</h4>
           <p class="text-sm text-slate-600 mt-2">Tus entradas de diario están encriptadas y almacenadas en tu
             dispositivo</p>
         </div>
         <div class="p-4 rounded-2xl bg-white/65 backdrop-blur-md">
-          <h3 class="font-semibold">Diario Guiado</h3>
+          <h4 class="font-semibold">Diario Guiado</h4>
           <p class="text-sm text-slate-600 mt-2">Escribe sobre tu dia, reflexionando sobre las distintas áreas que hay
             que trabajar para llevar una vida plena</p>
         </div>
         <div class="p-4 rounded-2xl bg-white/65 backdrop-blur-md">
-          <h3 class="font-semibold">Seguimiento de emociones</h3>
+          <h4 class="font-semibold">Seguimiento de emociones</h4>
           <p class="text-sm text-slate-600 mt-2">Haz revisiones para registrar tu estado emocional y valoraciones acerca
             de tu dia a dia</p>
         </div>
       </div>
 
       <!-- Features 2 -->
-      <div id="features2" class="mt-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
+      <div id="features2" class="mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
         <div class="p-4 rounded-2xl bg-white/65 backdrop-blur-md">
-          <h3 class="font-semibold">Estadísticas</h3>
+          <h4 class="font-semibold">Estadísticas</h4>
           <p class="text-sm text-slate-600 mt-2">Gráficas que te muestran tu actividad, tu trayectoría emocional y
             frecuencia emocional </p>
         </div>
         <div class="p-4 rounded-2xl bg-white/65 backdrop-blur-md">
-          <h3 class="font-semibold">Trabajo Interno</h3>
+          <h4 class="font-semibold">Trabajo Interno</h4>
           <p class="text-sm text-slate-600 mt-2">Escribe ensayos sobre temas importantes para ti, como la asertividad,
             autoestima, perseverancia, gratitud, etc.</p>
         </div>
         <div class="p-4 rounded-2xl bg-white/65 backdrop-blur-md">
-          <h3 class="font-semibold">Meditación</h3>
+          <h4 class="font-semibold">Meditación</h4>
           <p class="text-sm text-slate-600 mt-2">Temporizador con instrucciones para meditar, pausar e incrementar la
             concentración.</p>
         </div>
       </div>
 
-      <div id="gallery" class="mt-10 flex justify-center bg-gallery rounded-3xl shadow-lg p-6">
+      <!-- Gallery -->
+      <h3 class="text-3xl text-black mt-10">Galería</h3>
+      <div id="gallery" class="mt-4 flex justify-center bg-gallery rounded-3xl shadow-lg p-6">
         <!-- Limit the carousel size -->
         <div class="swiper mySwiper w-full max-w-4xl rounded-xl pt-12 ">
           <div class="swiper-wrapper">
@@ -187,7 +191,8 @@
           </div>
           <div class="flex flex-col sm:flex-row gap-3">
             <a class="px-4 py-2 rounded-full bg-white/10 border hover:brightness-110"
-              href="https://github.com/selekode/Topaz/releases/download/v25.9.1-SNAPSHOT/topaz-25.9.1-SNAPSHOT.jar">Descargar .jar</a>
+              href="https://github.com/selekode/Topaz/releases/download/v25.9.1-SNAPSHOT/topaz-25.9.1-SNAPSHOT.jar">Descargar
+              .jar</a>
             <a class="px-4 py-2 rounded-full bg-white/10 border hover:brightness-110" href="documentacion.html">Guía de
               instalación</a>
           </div>
