--- a/documentacion.html
+++ b/documentacion.html
@@ -29,7 +29,7 @@
     <div
       class="flex items-center justify-between px-3 py-2 bg-white/60 backdrop-blur-md rounded-2xl shadow-lg border border-white/70">
       <div class="flex items-center gap-3">
-        <h1 class="text-sm ubuntu-regular text-slate-700">topaz</h1>
+        <a href="index.html"><h1 class="text-sm ubuntu-regular text-slate-700">topaz</h1></a>
       </div>
 
       <div class="flex items-center gap-3">
