--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       <!-- Hero -->
       <div
         class="p-6 bg-white/70 backdrop-blur-md rounded-3xl shadow-xl border border-white/60 flex flex-col md:flex-row gap-6">
-        <div class="flex-1 text-center md:text-left">
+        <div class="flex-1 text-center md:text-center">
           <h1 class="text-3xl text-topaz-700 ubuntu-regular">topaz</h1>
           <h2 class="text-4xl text-black mt-2">Tu viaje personal, en tus propias palabras</h2>
           <p class="mt-3 text-slate-600 max-w-xl mx-auto md:mx-0">Topaz es una app que te ayudará en tu crecimiento
             personal.</p>
           <p class="mt-2 text-slate-600 max-w-xl mx-auto md:mx-0">Es un diario guiado que te ayudará a hacer
             introspección que favorece en la regulación y el bienestar emocional.</p>
-          <div class="mt-6 flex flex-col sm:flex-row justify-center md:justify-start gap-3">
+          <div class="mt-6 flex flex-col sm:flex-row justify-center md:justify-center gap-3">
             <a href="#download"
               class="inline-flex items-center justify-center gap-2 px-4 py-2 rounded-full bg-topaz-700 text-white font-semibold shadow hover:brightness-105">Descargar</a>
             <a href="#features"
