Added captions to images

--- a/index.html
+++ b/index.html
@@ -115,59 +115,82 @@
       <h3 class="text-3xl text-black mt-10">Galería</h3>
       <div id="gallery" class="mt-4 flex justify-center bg-gallery rounded-3xl shadow-lg p-6">
         <!-- Limit the carousel size -->
-        <div class="swiper mySwiper w-full max-w-4xl rounded-xl pt-12 ">
+        <div class="swiper mySwiper w-full max-w-4xl rounded-xl pt-6 ">
           <div class="swiper-wrapper">
             <!-- Slide 1 -->
             <div class="swiper-slide relative">
+              <p class="text-accent">Inicio</p>
+              <p class="mb-6">Recordatorios para que escribas hoy y rachas para ver lo constante que estás siendo</p>
               <img src="images/gallery-dashboard.png" alt="dashboard" class="w-full h-auto" />
             </div>
 
             <div class="swiper-slide relative">
+              <p class="text-accent">Diario</p>
+              <p class="mb-6">Escribe sobre tu dia, reflexionando sobre las distintas áreas que hay que trabajar para
+                llevar una vida plena</p>
               <img src="images/gallery-diary.png" alt="diario" class="w-full h-auto rounded-xl" />
             </div>
 
             <!-- Slide 3 -->
             <div class="swiper-slide relative">
+              <p class="text-accent">Diario</p>
+              <p class="mb-6">Edita una entrada de diario</p>
               <img src="images/gallery-diaryEdit.png" alt="diario editar" class="w-full h-auto rounded-xl" />
             </div>
 
-            <!-- Slide 4 -->
+            <!-- Slide 4 
             <div class="swiper-slide relative">
+              <p class="text-accent">Dashboard:</p>
+              <p class="mb-6">Recordatorios para que escribas hoy y rachas para ver lo constante que estás siendo</p>
               <img src="images/gallery-diaryEdit.png" alt="diario editar" class="w-full h-auto rounded-xl" />
             </div>
-
+-->
             <!-- Slide 5 -->
             <div class="swiper-slide relative">
+              <p class="text-accent">Revisión</p>
+              <p class="mb-6">Haz revisiones para registrar tu estado emocional y valoraciones acerca de tu dia a dia</p>
               <img src="images/gallery-revision.png" alt="revision" class="w-full h-auto rounded-xl" />
             </div>
 
             <!-- Slide 6 -->
             <div class="swiper-slide relative">
+              <p class="text-accent">Revisión</p>
+              <p class="mb-6">Editar una revisión</p>
               <img src="images/gallery-revisionEdit.png" alt="revision edit" class="w-full h-auto rounded-xl" />
             </div>
 
             <!-- Slide 7 -->
             <div class="swiper-slide relative">
+              <p class="text-accent">Revisión</p>
+              <p class="mb-6">Editar una revisión</p>
               <img src="images/gallery-revisionEdit2.png" alt="revision edit" class="w-full h-auto rounded-xl" />
             </div>
 
             <!-- Slide 8 -->
             <div class="swiper-slide relative">
+              <p class="text-accent">Trabajo Interno</p>
+              <p class="mb-6">Escribe ensayos sobre temas importantes para ti</p>
               <img src="images/gallery-trabajoInterno.png" alt="trabajo interno" class="w-full h-auto rounded-xl" />
             </div>
 
             <!-- Slide 9 -->
             <div class="swiper-slide relative">
+              <p class="text-accent">Estadísticas</p>
+              <p class="mb-6">Gráficas que te muestran tu actividad, tu trayectoría emocional y frecuencia emocional</p>
               <img src="images/gallery-stats.png" alt="stats" class="w-full h-auto rounded-xl" />
             </div>
 
             <!-- Slide 10 -->
             <div class="swiper-slide relative">
+              <p class="text-accent">Estadísticas</p>
+              <p class="mb-6">Gráficas que te muestran tu actividad, tu trayectoría emocional y frecuencia emocional</p>
               <img src="images/gallery-stats1.png" alt="stats" class="w-full h-auto rounded-xl" />
             </div>
 
             <!-- Slide 11 -->
             <div class="swiper-slide relative">
+              <p class="text-accent">Meditación</p>
+              <p class="mb-6">Temporizador con instrucciones para meditar, pausar e incrementar la concentración</p>
               <img src="images/meditacion.png" alt="meditation" class="w-full h-auto rounded-xl" />
             </div>
           </div>
